# opus-codec-utils-android

./: LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/chennevwin/opus/demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/chennevwin/opus/demo/: MainActivity.kt
app/src/main/java/com/chennevwin/opus/demo/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/chennevwin/opus/demo/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
opus/: build.gradle.kts
opus/src/androidTest/java/com/chennevwin/opus/: ExampleInstrumentedTest.kt
opus/src/main/cpp/: CMakeLists.txt
opus/src/main/cpp/cmake/: import_opus.cmake
opus/src/main/cpp/include/: jni_tools.h  opus_decoder_native.h  opus_encoder_native.h
opus/src/main/cpp/src/: opus_decoder_native.cpp  opus_encoder_native.cpp  opus_native.cpp
opus/src/main/java/com/chennevwin/opus/: BaseOpus.kt  OpusConstants.kt  OpusDecoder.kt  OpusEncoder.kt
opus/src/test/java/com/chennevwin/opus/: ExampleUnitTest.kt
